changed scroll animations

--- a/index.html
+++ b/index.html
@@ -133,12 +133,7 @@
     </section>
 
     <!-- Services Section -->
-    <section
-      id="services"
-      class="py-5 bg-light"
-      data-aos="fade-up"
-      data-aos-duration="3000"
-    >
+    <section id="services" class="py-5 bg-light" data-aos="fade-up">
       <div class="container">
         <div class="row">
           <div
@@ -150,41 +145,33 @@
           </div>
         </div>
         <div class="row">
-          <div
-            class="col-md-4 bottom-margin"
-            data-aos="fade-up"
-            data-aos-duration="3000"
-          >
+          <div class="col-md-4 bottom-margin" data-aos="fade-up">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">🎨 Web Design</h5>
-                <p class="card-text">
+                <p class="card-text" data-aos="zoom-in">
                   I create visually appealing and user-friendly designs for
                   websites and web applications.
                 </p>
               </div>
             </div>
           </div>
-          <div
-            class="col-md-4 bottom-margin"
-            data-aos="fade-up"
-            data-aos-duration="3000"
-          >
+          <div class="col-md-4 bottom-margin" data-aos="fade-up">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">👨🏻‍💻 Web Development</h5>
-                <p class="card-text">
+                <p class="card-text" data-aos="zoom-in">
                   I develop custom websites and web applications using HTML,
                   CSS, JavaScript, and various web development frameworks.
                 </p>
               </div>
             </div>
           </div>
-          <div class="col-md-4" data-aos="fade-up" data-aos-duration="3000">
+          <div class="col-md-4" data-aos="fade-up">
             <div class="card">
               <div class="card-body">
                 <h5 class="card-title">📱 Responsive Design</h5>
-                <p class="card-text">
+                <p class="card-text" data-aos="zoom-in">
                   I ensure that all my designs are responsive and optimized for
                   different devices and screen sizes.
                 </p>
@@ -204,11 +191,7 @@
           </div>
         </div>
         <div class="row">
-          <div
-            class="col-md-4 mb-4"
-            data-aos="fade-up"
-            data-aos-duration="3000"
-          >
+          <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -216,8 +199,8 @@
                 alt="Project 1"
               />
               <div class="card-body">
-                <h5 class="card-title">myLibrary</h5>
-                <p class="card-text">
+                <h5 class="card-title" data-aos="fade-right">myLibrary</h5>
+                <p class="card-text" data-aos="zoom-in">
                   A personalized reading list application using JavaScript,
                   allowing users to create, track, and customize their reading
                   lists. I leveraged the Web Storage API to store the reading
@@ -233,11 +216,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="col-md-4 mb-4"
-            data-aos="fade-up"
-            data-aos-duration="3000"
-          >
+          <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -245,8 +224,8 @@
                 alt="Project 2"
               />
               <div class="card-body">
-                <h5 class="card-title">Etch-A-Sketch</h5>
-                <p class="card-text">
+                <h5 class="card-title" data-aos="fade-right">Etch-A-Sketch</h5>
+                <p class="card-text" data-aos="zoom-in">
                   An intuitive sketch pad application using HTML5, CSS3, and
                   JavaScript to showcase my ability to manipulate the Document
                   Object Model (DOM) effectively. The application allows users
@@ -262,11 +241,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="col-md-4 mb-4"
-            data-aos="fade-up"
-            data-aos-duration="3000"
-          >
+          <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -274,8 +249,10 @@
                 alt="Project 3"
               />
               <div class="card-body">
-                <h5 class="card-title">Rock, Paper, Scissors</h5>
-                <p class="card-text">
+                <h5 class="card-title" data-aos="fade-right">
+                  Rock, Paper, Scissors
+                </h5>
+                <p class="card-text" data-aos="zoom-in">
                   An interactive game using HTML5, CSS3, and JavaScript, which
                   challenges two users to compete and determine the best out of
                   7 wins. I implemented JavaScript to handle user input and
@@ -293,11 +270,7 @@
           </div>
         </div>
         <div class="row">
-          <div
-            class="col-md-4 mb-4"
-            data-aos="fade-up"
-            data-aos-duration="3000"
-          >
+          <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -305,8 +278,8 @@
                 alt="Project 3"
               />
               <div class="card-body">
-                <h5 class="card-title">Calculator</h5>
-                <p class="card-text">
+                <h5 class="card-title" data-aos="fade-right">Calculator</h5>
+                <p class="card-text" data-aos="zoom-in">
                   I developed a basic calculator application using HTML, CSS,
                   and JavaScript. The calculator features a display area for
                   input and output, as well as a set of buttons for arithmetic
@@ -323,11 +296,7 @@
               </div>
             </div>
           </div>
-          <div
-            class="col-md-4 mb-4"
-            data-aos="fade-up"
-            data-aos-duration="3000"
-          >
+          <div class="col-md-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -335,8 +304,8 @@
                 alt="Project 3"
               />
               <div class="card-body">
-                <h5 class="card-title">Coming Soon</h5>
-                <p class="card-text">
+                <h5 class="card-title" data-aos="fade-right">Coming Soon</h5>
+                <p class="card-text" data-aos="zoom-in">
                   I am currently working on a WooCommerce website. Please check
                   back soon for updates!
                 </p>
@@ -357,7 +326,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6" data-aos="fade-up" data-aos-duration="3000">
+          <div class="col-md-6" data-aos="fade-up">
             <form class="bottom-margin">
               <div class="form-group">
                 <label for="name">Name</label>
@@ -381,9 +350,9 @@
               </button>
             </form>
           </div>
-          <div class="col-md-6" data-aos="fade-up" data-aos-duration="3000">
+          <div class="col-md-6" data-aos="fade-up">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body" data-aos="zoom-in">
                 <h5 class="card-title">Contact Information</h5>
                 <p class="card-text">
                   <s>Feel free to contact me via the form</s> and follow me on
