changed header view on mobile

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
       data-aos-duration="3000"
     >
       <div class="container">
-        <h1 class="display-5" data-aos="fade-right" data-aos-duration="3000">
+        <h1 class="display-5" data-aos="fade-down" data-aos-duration="3000">
           <p style="margin-bottom: 5px">
             John Bouakhasith, <span class="typed-text"></span
             ><span class="cursor">&nbsp;</span>
@@ -352,7 +352,7 @@
           </div>
           <div class="col-md-6" data-aos="fade-up">
             <div class="card">
-              <div class="card-body" data-aos="zoom-in">
+              <div class="card-body">
                 <h5 class="card-title">Contact Information</h5>
                 <p class="card-text">
                   <s>Feel free to contact me via the form</s> and follow me on
