added cat images, modified index, app, and style

--- a/index.html
+++ b/index.html
@@ -120,13 +120,43 @@
               reach out if you have any questions or inquiries!
             </p>
           </div>
-          <div class="col-md-6" data-aos="zoom-in-up" data-aos-duration="3000">
-            <img
+          <div class="col-md-6" data-aos="zoom-in" data-aos-duration="3000">
+            <!-- <img
               src="images/avatar.png"
               alt="Profile Picture"
               class="img-fluid"
               style="float: right"
-            />
+            /> -->
+            <div
+              id="carouselExampleSlidesOnly"
+              class="carousel slide carousel-fade"
+              data-ride="carousel"
+              style="float: right"
+            >
+              <div class="carousel-inner round">
+                <div class="carousel-item active">
+                  <img
+                    src="images/kevin.png"
+                    class="d-block w-100"
+                    alt="Kevin"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="images/calvin.png"
+                    class="d-block w-100"
+                    alt="Calvin"
+                  />
+                </div>
+                <div class="carousel-item">
+                  <img
+                    src="images/cats.png"
+                    class="d-block w-100"
+                    alt="Both fat cats"
+                  />
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -211,6 +241,7 @@
                   href="https://johnbdot.github.io/library/"
                   target="_blank"
                   class="btn btn-dark"
+                  data-aos="fade-down"
                   >View Project</a
                 >
               </div>
@@ -236,6 +267,7 @@
                   href="https://johnbdot.github.io/etch-a-sketch/"
                   target="_blank"
                   class="btn btn-dark"
+                  data-aos="fade-down"
                   >View Project</a
                 >
               </div>
@@ -263,6 +295,7 @@
                   href="https://johnbdot.github.io/rock-paper-scissors/"
                   target="_blank"
                   class="btn btn-dark"
+                  data-aos="fade-down"
                   >View Project</a
                 >
               </div>
@@ -291,6 +324,7 @@
                   href="https://johnbdot.github.io/calculator/"
                   target="_blank"
                   class="btn btn-dark"
+                  data-aos="fade-down"
                   >View Project</a
                 >
               </div>
@@ -309,7 +343,9 @@
                   I am currently working on a WooCommerce website. Please check
                   back soon for updates!
                 </p>
-                <a href="#" target="" class="btn btn-dark">View Project</a>
+                <a href="#" target="" class="btn btn-dark" data-aos="fade-down"
+                  >View Project</a
+                >
               </div>
             </div>
           </div>
