added col-lg to About section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,11 @@
     <section id="about" class="py-5 text-justify">
       <div class="container">
         <div class="row align-items-center">
-          <div class="col-md-6" data-aos="fade-right" data-aos-duration="3000">
+          <div
+            class="col-md-12 col-lg-6"
+            data-aos="fade-right"
+            data-aos-duration="3000"
+          >
             <h2 data-aos="fade-right" data-aos-duration="3000">About Me</h2>
             <p>
               👋 Hello there! My name is John Bouakhasith and I am a junior web
@@ -120,43 +124,37 @@
               reach out if you have any questions or inquiries!
             </p>
           </div>
-          <div class="col-md-6" data-aos="zoom-in" data-aos-duration="3000">
-            <!-- <img
+          <div
+            class="col-md-12 col-lg-6"
+            data-aos="zoom-in"
+            data-aos-duration="3000"
+          >
+            <img
               src="images/avatar.png"
               alt="Profile Picture"
               class="img-fluid"
               style="float: right"
-            /> -->
-            <div
-              id="carouselExampleSlidesOnly"
+            />
+            <!-- <div
+              id="slides"
               class="carousel slide carousel-fade"
               data-ride="carousel"
-              style="float: right"
             >
               <div class="carousel-inner round">
                 <div class="carousel-item active">
-                  <img
-                    src="images/kevin.png"
-                    class="d-block w-100"
-                    alt="Kevin"
-                  />
+                  <img src="images/kevin.png" class="d-block w-100 img-fluid""
+                  alt="Kevin" />
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="images/calvin.png"
-                    class="d-block w-100"
-                    alt="Calvin"
-                  />
+                  <img src="images/calvin.png" class="d-block w-100 img-fluid""
+                  alt="Calvin" />
                 </div>
                 <div class="carousel-item">
-                  <img
-                    src="images/cats.png"
-                    class="d-block w-100"
-                    alt="Both fat cats"
-                  />
+                  <img src="images/cats.png" class="d-block w-100 img-fluid""
+                  alt="Both fat cats" />
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
