changes before dark theme

--- a/index.html
+++ b/index.html
@@ -125,19 +125,18 @@
             </p>
           </div>
           <div
-            class="col-md-12 col-lg-6"
+            class="col-md-12 col-lg-6 avatar float"
             data-aos="zoom-in"
             data-aos-duration="3000"
           >
             <img
               src="images/avatar.png"
               alt="Profile Picture"
-              class="img-fluid"
-              style="float: right"
+              class="img-fluid float"
             />
             <!-- <div
               id="slides"
-              class="carousel slide carousel-fade"
+              class="carousel slide carousel-fade float"
               data-ride="carousel"
             >
               <div class="carousel-inner round">
