--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <!-- Navigation Bar -->
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-color-card">
       <a class="navbar-brand" href="#"
         ><i class="fa-solid fa-terminal"></i> johnbthe.dev</a
       >
@@ -70,7 +70,7 @@
 
     <!-- Header -->
     <header
-      class="jumbotron jumbotron-fluid"
+      class="jumbotron jumbotron-fluid bg-color-section"
       data-aos="fade-down"
       data-aos-duration="3000"
     >
@@ -160,7 +160,7 @@
     </section>
 
     <!-- Services Section -->
-    <section id="services" class="py-5 bg-light" data-aos="fade-up">
+    <section id="services" class="py-5 bg-color-section" data-aos="fade-up">
       <div class="container">
         <div class="row">
           <div
@@ -174,7 +174,7 @@
         <div class="row">
           <div class="col-md-4 bottom-margin" data-aos="fade-up">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title">🎨 Web Design</h5>
                 <p class="card-text" data-aos="zoom-in">
                   I create visually appealing and user-friendly designs for
@@ -185,7 +185,7 @@
           </div>
           <div class="col-md-4 bottom-margin" data-aos="fade-up">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title">👨🏻‍💻 Web Development</h5>
                 <p class="card-text" data-aos="zoom-in">
                   I develop custom websites and web applications using HTML,
@@ -196,7 +196,7 @@
           </div>
           <div class="col-md-4" data-aos="fade-up">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title">📱 Responsive Design</h5>
                 <p class="card-text" data-aos="zoom-in">
                   I ensure that all my designs are responsive and optimized for
@@ -225,7 +225,7 @@
                 class="card-img-top"
                 alt="Project 1"
               />
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title" data-aos="fade-right">myLibrary</h5>
                 <p class="card-text" data-aos="zoom-in">
                   A personalized reading list application using JavaScript,
@@ -251,7 +251,7 @@
                 class="card-img-top"
                 alt="Project 2"
               />
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title" data-aos="fade-right">Etch-A-Sketch</h5>
                 <p class="card-text" data-aos="zoom-in">
                   An intuitive sketch pad application using HTML5, CSS3, and
@@ -277,7 +277,7 @@
                 class="card-img-top"
                 alt="Project 3"
               />
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title" data-aos="fade-right">
                   Rock, Paper, Scissors
                 </h5>
@@ -307,7 +307,7 @@
                 class="card-img-top"
                 alt="Project 3"
               />
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title" data-aos="fade-right">Calculator</h5>
                 <p class="card-text" data-aos="zoom-in">
                   I developed a basic calculator application using HTML, CSS,
@@ -334,7 +334,7 @@
                 class="card-img-top"
                 alt="Project 3"
               />
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title" data-aos="fade-right">Coming Soon</h5>
                 <p class="card-text" data-aos="zoom-in">
                   I am currently working on a WooCommerce website. Please check
@@ -385,7 +385,7 @@
           </div>
           <div class="col-md-6" data-aos="fade-up">
             <div class="card">
-              <div class="card-body">
+              <div class="card-body bg-color-card">
                 <h5 class="card-title">Contact Information</h5>
                 <p class="card-text">
                   <s>Feel free to contact me via the form</s> and follow me on
@@ -421,7 +421,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white pt-3">
+    <footer class="bg-color-card text-white pt-3">
       <div class="container">
         <div class="row align-items-center">
           <div class="col-md-12">
