change font colors and typing effect

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
       <div class="container">
         <h1 class="display-5" data-aos="fade-down" data-aos-duration="3000">
           <p style="margin-bottom: 5px">
-            John Bouakhasith, <span class="typed-text"></span
+            johnBouakhasith: <span class="typed-text"></span
             ><span class="cursor">&nbsp;</span>
           </p>
         </h1>
