--- a/index.html
+++ b/index.html
@@ -76,12 +76,12 @@
     >
       <div class="container">
         <h1 class="display-5" data-aos="fade-down" data-aos-duration="3000">
-          <p style="margin-bottom: 5px">
+          <p class="no-margin">
             johnBouakhasith: <span class="typed-text"></span
             ><span class="cursor">&nbsp;</span>
           </p>
         </h1>
-        <p class="lead" data-aos="fade-left" data-aos-duration="3000">
+        <p class="lead no-margin" data-aos="fade-left" data-aos-duration="3000">
           Welcome to my portfolio. Here you can find information about my skills
           and projects.
         </p>
@@ -93,7 +93,7 @@
       <div class="container">
         <div class="row align-items-center">
           <div
-            class="col-md-12 col-lg-6"
+            class="col-sm-12 col-md-12 col-lg-6"
             data-aos="fade-right"
             data-aos-duration="3000"
           >
@@ -119,13 +119,13 @@
               feline companions - Kevin and Calvin.
             </p>
 
-            <p>
+            <p class="no-margin bottom-margin">
               Below, you can see some examples of my work. Please feel free to
               reach out if you have any questions or inquiries!
             </p>
           </div>
           <div
-            class="col-md-12 col-lg-6 avatar float"
+            class="col-md-12 col-lg-6 avatar"
             data-aos="zoom-in"
             data-aos-duration="3000"
           >
@@ -172,7 +172,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 bottom-margin" data-aos="fade-up">
+          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
             <div class="card">
               <div class="card-body bg-color-card">
                 <h5 class="card-title">🎨 Web Design</h5>
@@ -183,7 +183,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 bottom-margin" data-aos="fade-up">
+          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
             <div class="card">
               <div class="card-body bg-color-card">
                 <h5 class="card-title">👨🏻‍💻 Web Development</h5>
@@ -194,7 +194,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4" data-aos="fade-up">
+          <div class="col-md-12 col-lg-4" data-aos="fade-up">
             <div class="card">
               <div class="card-body bg-color-card">
                 <h5 class="card-title">📱 Responsive Design</h5>
@@ -218,7 +218,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-4" data-aos="fade-up">
+          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -244,7 +244,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-4" data-aos="fade-up">
+          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -270,7 +270,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-4" data-aos="fade-up">
+          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -300,7 +300,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-4" data-aos="fade-up">
+          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -327,7 +327,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-4 mb-4" data-aos="fade-up">
+          <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
             <div class="card">
               <img
                 src="images/project.png"
@@ -359,7 +359,7 @@
           </div>
         </div>
         <div class="row">
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6 cold-lg-4" data-aos="fade-up">
             <form class="bottom-margin">
               <div class="form-group">
                 <label for="name">Name</label>
@@ -383,7 +383,7 @@
               </button>
             </form>
           </div>
-          <div class="col-md-6" data-aos="fade-up">
+          <div class="col-md-6 cold-lg-4" data-aos="fade-up">
             <div class="card">
               <div class="card-body bg-color-card">
                 <h5 class="card-title">Contact Information</h5>
