changed jumbotron>p data-aos to fade down

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             ><span class="cursor">&nbsp;</span>
           </p>
         </h1>
-        <p class="lead no-margin" data-aos="fade-left" data-aos-duration="3000">
+        <p class="lead no-margin" data-aos="fade-down" data-aos-duration="3000">
           Welcome to my portfolio. Here you can find information about my skills
           and projects.
         </p>
