--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
         </div>
         <div class="row">
           <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <div class="card-body bg-color-card">
                 <h5 class="card-title">🎨 Web Design</h5>
                 <p class="card-text" data-aos="zoom-in">
@@ -184,7 +184,7 @@
             </div>
           </div>
           <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <div class="card-body bg-color-card">
                 <h5 class="card-title">👨🏻‍💻 Web Development</h5>
                 <p class="card-text" data-aos="zoom-in">
@@ -195,7 +195,7 @@
             </div>
           </div>
           <div class="col-md-12 col-lg-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <div class="card-body bg-color-card">
                 <h5 class="card-title">📱 Responsive Design</h5>
                 <p class="card-text" data-aos="zoom-in">
@@ -219,9 +219,9 @@
         </div>
         <div class="row">
           <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <img
-                src="images/project.png"
+                src="images/browser-tab.png"
                 class="card-img-top"
                 alt="Project 1"
               />
@@ -245,9 +245,9 @@
             </div>
           </div>
           <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <img
-                src="images/project.png"
+                src="images/browser-tab.png"
                 class="card-img-top"
                 alt="Project 2"
               />
@@ -271,9 +271,9 @@
             </div>
           </div>
           <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <img
-                src="images/project.png"
+                src="images/browser-tab.png"
                 class="card-img-top"
                 alt="Project 3"
               />
@@ -301,9 +301,9 @@
         </div>
         <div class="row">
           <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <img
-                src="images/project.png"
+                src="images/browser-tab.png"
                 class="card-img-top"
                 alt="Project 3"
               />
@@ -328,9 +328,9 @@
             </div>
           </div>
           <div class="col-md-12 col-lg-4 mb-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <img
-                src="images/project.png"
+                src="images/browser-tab.png"
                 class="card-img-top"
                 alt="Project 3"
               />
@@ -384,7 +384,7 @@
             </form>
           </div>
           <div class="col-md-6 cold-lg-4" data-aos="fade-up">
-            <div class="card">
+            <div>
               <div class="card-body bg-color-card">
                 <h5 class="card-title">Contact Information</h5>
                 <p class="card-text">
