--- a/v2/index.html
+++ b/v2/index.html
@@ -25,7 +25,7 @@
           <p class="mt-4 sm:text-xl sm:leading-relaxed">
             Please excuse the inconvenience as my website is currently under
             construction. If you'd like to keep in touch, please click the
-            button below. Thank you!
+            button below. Thank you for your patience!
           </p>
 
           <div class="mt-8 flex flex-wrap justify-center gap-4">
