--- a/v2/index.html
+++ b/v2/index.html
@@ -8,34 +8,113 @@
     <link rel="icon" href="favicon.png" type="image/x-icon" />
     <title>johnbthe.dev | Under Construction</title>
   </head>
-  <body class="bg-gray-50">
-    <section class="bg-gray-50">
+  <body>
+    <nav class="bg-white">
+      <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
+        <div class="flex justify-between h-16">
+          <div class="flex-shrink-0 flex items-center">
+            <h1 class="text-2xl font-bold text-gray-800">johnbthe.dev</h1>
+          </div>
+          <div class="flex items-center">
+            <a
+              href="#"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+              >Home</a
+            >
+            <a
+              href="#"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+              >About</a
+            >
+            <a
+              href="#"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+              >Contact</a
+            >
+          </div>
+        </div>
+      </div>
+    </nav>
+    <section
+      id="hero"
+      class="relative bg-gradient-to-b from-blue-500 via-purple-500 to-pink-500"
+    >
       <div
         class="mx-auto max-w-screen-xl px-4 py-32 lg:flex lg:h-screen lg:items-center"
       >
         <div class="mx-auto max-w-xl text-center">
-          <h1 class="text-3xl font-extrabold sm:text-4xl">
+          <h1 class="text-3xl font-extrabold sm:text-4xl text-white">
             Hi. I'm John Bouakhasith,
             <strong
-              class="bg-gradient-to-r from-green-300 via-blue-500 to-purple-600 bg-clip-text text-3xl font-extrabold text-transparent sm:text-4xl sm:block"
+              class="bg-yellow-300 text-3xl font-extrabold text-transparent bg-clip-text sm:text-4xl sm:block"
             >
-              Self-Taught Web Developer.
+              Self-Taught Web Developer
             </strong>
           </h1>
 
-          <p class="mt-4 sm:text-xl sm:leading-relaxed">
-            Please excuse the inconvenience as my website is currently under
-            construction. If you'd like to keep in touch, please click the
-            button below. Thank you for your patience!
+          <p class="mt-4 sm:text-xl sm:leading-relaxed text-white">
+            Join me on my journey as a self-taught web developer, breaking down
+            barriers to entry
           </p>
 
           <div class="mt-8 flex flex-wrap justify-center gap-4">
             <a
-              class="block w-full rounded border border-blue-600 bg-blue-600 px-12 py-3 text-sm font-medium text-white sm:w-auto"
-              href="mailto:hi@johnbthe.dev"
+              class="block w-full rounded border border-white bg-white px-12 py-3 text-sm font-medium text-gray-900 sm:w-auto"
+              href="#"
             >
-              Contact Me
+              Let's Go
             </a>
+          </div>
+        </div>
+
+        <div class="absolute inset-x-0 bottom-0">
+          <svg
+            class="w-full h-16 text-white"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 1440 320"
+            preserveAspectRatio="none"
+            width="100%"
+          >
+            <path
+              fill="currentColor"
+              fill-opacity="1"
+              d="M0,128L60,117.3C120,107,240,85,360,74.7C480,64,600,64,720,74.7C840,85,960,107,1080,128C1200,149,1320,171,1380,181.3L1440,192V320H0V192Z"
+            ></path>
+          </svg>
+        </div>
+      </div>
+    </section>
+
+    <section id="blog" class="py-32 px-4 sm:px-6 lg:px-8">
+      <div class="max-w-7xl mx-auto">
+        <div class="text-center mb-8">
+          <h1 class="text-4xl font-bold mb-4">My Journey</h1>
+          <p class="text-lg">Stay up to date with our latest posts.</p>
+        </div>
+        <div class="flex flex-col md:flex-row md:space-x-6">
+          <div class="w-full md:w-1/3 lg:w-1/4">
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+              <img
+                src="https://placehold.it/150x150"
+                alt="Author's portrait"
+                class="h-48 w-full object-cover object-center"
+              />
+              <div class="p-6">
+                <h2 class="text-xl font-semibold mb-2">Author Name</h2>
+                <p class="text-gray-500 text-sm">Published on March 29, 2023</p>
+              </div>
+            </div>
+          </div>
+          <div class="w-full md:w-2/3 lg:w-3/4">
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
+              <div class="p-6">
+                <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
+                <p class="text-lg mb-4">Here's the content of the blog post.</p>
+                <p class="text-lg mb-4">
+                  Here's some more content for the blog post.
+                </p>
+              </div>
+            </div>
           </div>
         </div>
       </div>
