--- a/v2/index.html
+++ b/v2/index.html
@@ -52,22 +52,18 @@
               Self-Taught Web Developer
             </strong>
           </h1>
-
           <p class="mt-4 sm:text-xl sm:leading-relaxed text-white">
             Join me on my journey as a self-taught web developer, breaking down
             barriers to entry
           </p>
-
           <div class="mt-8 flex flex-wrap justify-center gap-4">
             <a
               class="block w-full rounded border border-white bg-white px-12 py-3 text-sm font-medium text-gray-900 sm:w-auto"
               href="#"
+              >Let's Go</a
             >
-              Let's Go
-            </a>
           </div>
         </div>
-
         <div class="absolute inset-x-0 bottom-0">
           <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
             <path
@@ -81,7 +77,7 @@
     </section>
 
     <section id="blog">
-      <div class="max-w-7xl mx-auto px-4 py-32 sm:px-6 lg:px-8">
+      <div class="max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-32">
           <h1 class="text-4xl font-bold mb-4">
             My Journey from Novice to Knowledgeable
@@ -91,63 +87,11 @@
             developers
           </p>
         </div>
-        <div class="flex flex-col mb-6 md:flex-row md:space-x-6">
-          <div>
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <img
-                src="https://placehold.it/150x150"
-                alt="Author's portrait"
-                class="h-48 w-full object-cover object-center"
-              />
-              <div class="p-6">
-                <h2 class="text-xl font-semibold mb-2">Author Name</h2>
-                <p class="text-gray-500 text-sm">Published on March 29, 2023</p>
-              </div>
-            </div>
-          </div>
-          <div class="w-full md:w-2/3 lg:w-3/4">
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <div class="p-6">
-                <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
-                <p class="text-lg mb-4">Here's the content of the blog post.</p>
-                <p class="text-lg mb-4">
-                  Here's some more content for the blog post.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="flex flex-col mb-6 md:flex-row md:space-x-6">
-          <div>
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <img
-                src="https://placehold.it/150x150"
-                alt="Author's portrait"
-                class="h-48 w-full object-cover object-center"
-              />
-              <div class="p-6">
-                <h2 class="text-xl font-semibold mb-2">Author Name</h2>
-                <p class="text-gray-500 text-sm">Published on March 29, 2023</p>
-              </div>
-            </div>
-          </div>
-          <div class="w-full md:w-2/3 lg:w-3/4">
-            <div class="bg-white rounded-lg shadow-md overflow-hidden">
-              <div class="p-6">
-                <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
-                <p class="text-lg mb-4">Here's the content of the blog post.</p>
-                <p class="text-lg mb-4">
-                  Here's some more content for the blog post.
-                </p>
-              </div>
-            </div>
-          </div>
-        </div>
         <div class="flex flex-col md:flex-row md:space-x-6">
-          <div>
+          <div class="flex-shrink-0 w-full md:w-1/3 lg:w-1/4 mb-6 md:mb-0">
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
               <img
-                src="https://placehold.it/150x150"
+                src="https://placehold.it/500x500"
                 alt="Author's portrait"
                 class="h-48 w-full object-cover object-center"
               />
@@ -165,6 +109,9 @@
                 <p class="text-lg mb-4">
                   Here's some more content for the blog post.
                 </p>
+                <a href="#" class="text-blue-500 hover:text-blue-700"
+                  >Read more &rarr;</a
+                >
               </div>
             </div>
           </div>
@@ -173,18 +120,14 @@
     </section>
 
     <section id="portfolio" class="relative bg-gray-50">
-      <div
-        class="w-full max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8 relative z-10"
-      >
+      <div class="max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-32">
           <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
           <p class="text-lg">Take a look at some of my recent projects.</p>
         </div>
-        <div class="flex flex-wrap flex-col md:flex-row -mx-4">
-          <div class="w-full md:w-1/2 lg:w-1/3 mb-6 px-4">
-            <div
-              class="bg-white rounded-lg shadow-md overflow-hidden md:flex-1"
-            >
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+          <div>
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
               <img
                 src="https://placehold.it/600x400"
                 alt="Project Image"
@@ -202,10 +145,8 @@
               </div>
             </div>
           </div>
-          <div class="w-full md:w-1/2 lg:w-1/3 mb-6 px-4">
-            <div
-              class="bg-white rounded-lg shadow-md overflow-hidden md:flex-1"
-            >
+          <div>
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
               <img
                 src="https://placehold.it/600x400"
                 alt="Project Image"
@@ -223,10 +164,8 @@
               </div>
             </div>
           </div>
-          <div class="w-full md:w-1/2 lg:w-1/3 mb-6 px-4">
-            <div
-              class="bg-white rounded-lg shadow-md overflow-hidden md:flex-1"
-            >
+          <div>
+            <div class="bg-white rounded-lg shadow-md overflow-hidden">
               <img
                 src="https://placehold.it/600x400"
                 alt="Project Image"
