--- a/v2/index.html
+++ b/v2/index.html
@@ -18,18 +18,23 @@
           <div class="flex items-center">
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
               >Home</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-              >About</a
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+              >Blog</a
             >
             <a
               href="#"
-              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-              >Contact</a
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+              >Portfolio</a
+            >
+            <a
+              href="#"
+              class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+              >About</a
             >
           </div>
         </div>
@@ -79,13 +84,8 @@
     <section id="blog">
       <div class="max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-32">
-          <h1 class="text-4xl font-bold mb-4">
-            My Journey from Novice to Knowledgeable
-          </h1>
-          <p class="text-lg">
-            Join me as I document my experiences and share tips for aspiring web
-            developers
-          </p>
+          <h1 class="text-4xl font-bold mb-4">My Journey</h1>
+          <p class="text-lg">Join me as I document and share my experiences</p>
         </div>
         <div class="flex flex-col md:flex-row md:space-x-6">
           <div class="flex-shrink-0 w-full md:w-1/3 lg:w-1/4 mb-6 md:mb-0">
@@ -123,7 +123,7 @@
       <div class="max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-32">
           <h1 class="text-4xl font-bold mb-4">Portfolio</h1>
-          <p class="text-lg">Take a look at some of my recent projects.</p>
+          <p class="text-lg">Take a look at some of my recent projects</p>
         </div>
         <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
           <div>
@@ -194,7 +194,7 @@
         <div class="text-center mb-32">
           <h1 class="text-4xl font-bold mb-4">About Me</h1>
           <p class="text-lg">
-            Here's a little bit about myself and my background.
+            Here's a little bit about myself and my background
           </p>
         </div>
         <div class="flex flex-wrap -mx-4">
@@ -229,7 +229,7 @@
       </div>
     </section>
 
-    <footer class="bg-blue-500 text-white py-8">
+    <footer class="bg-gray-600 text-white py-8">
       <div class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="md:flex md:items-center md:justify-between">
           <div class="mb-4 md:mb-0">
@@ -241,16 +241,24 @@
           <div class="md:flex md:items-center">
             <div class="text-sm">
               <a href="#" class="block mt-4 md:inline-block md:mt-0 mr-6"
-                >Privacy Policy</a
+                >Home</a
               >
               <a href="#" class="block mt-4 md:inline-block md:mt-0 mr-6"
-                >Terms of Service</a
+                >Blog</a
               >
-              <a href="#" class="block mt-4 md:inline-block md:mt-0">Contact</a>
+              <a href="#" class="block mt-4 md:inline-block md:mt-0 mr-6"
+                >Portfolio</a
+              >
+              <a href="#" class="block mt-4 md:inline-block md:mt-0">About</a>
             </div>
 
             <div class="text-sm md:ml-4 mt-4 md:mt-0">
-              &copy; 2023 johnbthe.dev. All rights reserved.
+              &copy; 2023 johnbthe.dev. Made with passion by
+              <a
+                href="https://www.instagram.com/johnbdot/"
+                class="block mt-4 md:inline-block md:mt-0"
+                >John B.</a
+              >
             </div>
           </div>
         </div>
