--- a/v2/index.html
+++ b/v2/index.html
@@ -9,13 +9,14 @@
     <title>johnbthe.dev | Under Construction</title>
   </head>
   <body>
+    <!-- Navigation -->
     <nav class="bg-white shadow-md">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="flex justify-between h-16">
           <div class="flex-shrink-0 flex items-center">
             <h1 class="text-2xl font-bold text-gray-800">johnbthe.dev</h1>
           </div>
-          <div class="flex items-center">
+          <div class="hidden lg:flex items-center">
             <a
               href="#"
               class="px-3 py-2 rounded-md text-sm font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
@@ -37,10 +38,66 @@
               >About</a
             >
           </div>
+          <!-- Hamburger Button -->
+          <button
+            class="block lg:hidden flex-shrink-0 ml-auto py-2 border border-transparent text-gray-600 focus:none"
+            id="menu-button"
+          >
+            <svg
+              class="h-6 w-6"
+              xmlns="http://www.w3.org/2000/svg"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+              aria-hidden="true"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16M4 18h16"
+              />
+            </svg>
+            <span class="sr-only">Open main menu</span>
+          </button>
         </div>
       </div>
     </nav>
 
+    <!-- Hamburger Menu -->
+    <div class="hidden w-full" id="menu">
+      <nav
+        class="text-sm font-medium text-gray-700 space-y-1"
+        aria-label="Main"
+      >
+        <a
+          href="#"
+          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+        >
+          Home
+        </a>
+        <a
+          href="#"
+          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+        >
+          Blog
+        </a>
+        <a
+          href="#"
+          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+        >
+          Portfolio
+        </a>
+        <a
+          href="#"
+          class="block px-3 py-2 text-base font-medium text-gray-700 hover:text-gray-50 hover:bg-gray-600"
+        >
+          About
+        </a>
+      </nav>
+    </div>
+
+    <!-- Hero -->
     <section
       id="hero"
       class="relative bg-gradient-to-b from-blue-500 via-purple-500 to-pink-500"
@@ -81,6 +138,7 @@
       </div>
     </section>
 
+    <!-- Blog -->
     <section id="blog">
       <div class="max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-32">
@@ -88,7 +146,7 @@
           <p class="text-lg">Join me as I document and share my experiences</p>
         </div>
         <div class="flex flex-col md:flex-row md:space-x-6">
-          <div class="flex-shrink-0 w-full md:w-1/3 lg:w-1/4 mb-6 md:mb-0">
+          <div class="flex-shrink-0 w-full md:w-1/4 lg:w-1/4 mb-6 md:mb-0">
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
               <img
                 src="https://placehold.it/500x500"
@@ -101,7 +159,7 @@
               </div>
             </div>
           </div>
-          <div class="w-full md:w-2/3 lg:w-3/4">
+          <div class="w-full md:w-full lg:w-full">
             <div class="bg-white rounded-lg shadow-md overflow-hidden">
               <div class="p-6">
                 <h1 class="text-4xl font-bold mb-4">Blog Post Header</h1>
@@ -119,6 +177,7 @@
       </div>
     </section>
 
+    <!-- Portfolio -->
     <section id="portfolio" class="relative bg-gray-50">
       <div class="max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8">
         <div class="text-center mb-32">
@@ -187,6 +246,7 @@
       </div>
     </section>
 
+    <!-- About -->
     <section id="about" class="relative">
       <div
         class="w-full max-w-7xl mx-auto py-32 px-4 sm:px-6 lg:px-8 relative z-10"
@@ -229,6 +289,7 @@
       </div>
     </section>
 
+    <!-- Footer -->
     <footer class="bg-gray-600 text-white py-8">
       <div class="container max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
         <div class="md:flex md:items-center md:justify-between">
@@ -237,7 +298,6 @@
               >johnbthe.dev</span
             >
           </div>
-
           <div class="md:flex md:items-center">
             <div class="text-sm">
               <a href="#" class="block mt-4 md:inline-block md:mt-0 mr-6"
@@ -251,18 +311,23 @@
               >
               <a href="#" class="block mt-4 md:inline-block md:mt-0">About</a>
             </div>
-
             <div class="text-sm md:ml-4 mt-4 md:mt-0">
               &copy; 2023 johnbthe.dev. Made with passion by
-              <a
-                href="https://www.instagram.com/johnbdot/"
-                class="block mt-4 md:inline-block md:mt-0"
-                >John B.</a
-              >
+              <a href="https://www.instagram.com/johnbdot/">John B.</a>
             </div>
           </div>
         </div>
       </div>
     </footer>
+
+    <!-- Hamburger -->
+    <script>
+      const menuButton = document.getElementById("menu-button");
+      const menu = document.getElementById("menu");
+
+      menuButton.addEventListener("click", () => {
+        menu.classList.toggle("hidden");
+      });
+    </script>
   </body>
 </html>
