changed hero link to button

--- a/v2/index.html
+++ b/v2/index.html
@@ -119,11 +119,11 @@
             barriers to entry
           </p>
           <div class="mt-8 flex flex-wrap justify-center gap-4">
-            <a
-              class="block w-full rounded border border-white bg-white px-12 py-3 text-sm font-medium text-gray-900 sm:w-auto"
-              href="#"
-              >Let's Go</a
+            <button
+              class="block w-full rounded bg-gray-50 px-12 py-3 text-sm font-medium text-gray-900 hover:text-gray-50 hover:bg-gray-600 sm:w-auto"
             >
+              Let's Go
+            </button>
           </div>
         </div>
         <div class="absolute inset-x-0 bottom-0">
